@@ -1,5 +1,7 @@
 1.999812 2018-03-17 pjacklam
 
+ * Add test file t/release-portability.t.
+
  * Add test file t/release-whitespaces.t.
 
  * Update the documentation of configuration parameters.
